# Urban-Transit-Platform

./: .gitignore  README.md
backend/: app.py
backend/crawler/: ticket_crawler.py
backend/database/json2db/: main.py
backend/station_id_normalization/: convert_station_name.py  fetch_staton_name.py  station_id_link.py
backend/transit-routing-engine/: CMakeLists.txt
backend/transit-routing-engine/include/: DBManager.h  MetroToolkit.h
backend/transit-routing-engine/src/bindings/: PyBinding.cpp
backend/transit-routing-engine/src/core/: main.cpp
backend/transit-routing-engine/src/data/: DBManager.cpp  MetroToolkit.cpp
backend/utils/: constant.py  data.py  storage.py
resource/csv/: train_data_2026-01-18_光明城_广州南.csv  train_data_2026-01-19_光明城_常平.csv  train_data_2026-01-19_光明城_广州南.csv  train_data_2026-01-19_光明城_长沙南.csv  train_data_2026-01-20_光明城_佛山西.csv  train_data_2026-01-20_光明城_长沙南.csv  train_data_2026-01-20_北京_上海.csv  train_data_2026-01-21_东莞_海口.csv  train_data_2026-01-22_光明城_上海.csv  train_data_2026-01-22_光明城_广州东.csv  train_data_2026-01-22_光明城_广州南.csv
resource/js/framework/: station_name.js
resource/json/MetroInfo/DG/: dongguan.json
resource/json/MetroInfo/FS/: foshan.json
resource/json/MetroInfo/GZ/: guangzhou.json
resource/json/MetroInfo/SZ/: shenzhen.json
